--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,29 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
             "name": "Launch Package",
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceFolder}/cmd/faucet",
+            "program": "${workspaceFolder}/cmd/faucet/main.go",
             "env": {
-                "KEYRING_BACKEND": "test",
-                "MNEMONIC": "quit erupt cool involve phrase cupboard faculty draft slogan hazard fury tackle ship siege panic ritual believe melody deny pulp loud jeans apart random",
-                "CLI_NAME": "archwayd",
-                "DENOMS": "utitus",
-                "NODE": "https://rpc.titus-1.archway.tech:443",
+                // Faucet server configuration
+                "LOG_LEVEL": "${env:LOG_LEVEL}",
+                "MAX_COINS_PER_ACCOUNT": "${env:MAX_COINS_PER_ACCOUNT}",
+                "MAX_COINS_PER_REQUEST": "${env:MAX_COINS_PER_REQUEST}",
+                "FAUCET_ACCOUNT_MNEMONIC": "${env:FAUCET_ACCOUNT_MNEMONIC}",
+                
+                // Blockchain App configuration
+                "APP_BINARY_NAME":"${env:APP_BINARY_NAME}",
+                "APP_HOME": "${env:APP_HOME}",
+                "APP_NODE": "${env:APP_NODE}",
+                "APP_CHAIN_ID": "${env:APP_CHAIN_ID}",
+
+                // Transfer tx configuration
+                "TX_GAS_ADJUSTMENT": "${env:TX_GAS_ADJUSTMENT}",
+                "TX_GAS_PRICES": "${env:TX_GAS_PRICES}",
+                "TX_BROADCAST_MODE": "${env:TX_BROADCAST_MODE}",
             },
         }
     ]
